...
    <item
        android:id="@+id/navigation_scan_qr"
        android:icon="@drawable/scanqr_icon"
        android:title="@string/navigation_item_scan_qr" />

    <item
        android:id="@+id/navigation_my_profile"
        android:icon="@drawable/profile_icon"
        android:title="@string/navigation_item_my_profile" />

    <item
        android:id="@+id/navigation_qr_finder"
        android:icon="@drawable/map_icon"
...
